fix: remove workspace RTL classes

--- a/src/patternfly/base/_common.scss
+++ b/src/patternfly/base/_common.scss
@@ -34,8 +34,7 @@
 }
 
 // Sets a block to LTR
-.#{$pf-prefix}m-dir-ltr,
-.ws-dir-ltr {
+.#{$pf-prefix}m-dir-ltr {
   @include pf-v5-set-inverse(false);
 
   direction: ltr;
