--- a/src/patternfly/base/_variables.scss
+++ b/src/patternfly/base/_variables.scss
@@ -300,4 +300,5 @@
 
 @import "./tokens/tokens-palette";
 @import "./tokens/tokens-default";
+@import "./tokens/tokens-font";
 @import "./tokens/tokens-dark";
