fix(code-editor): make code box and header LTR

--- a/src/patternfly/components/CodeEditor/code-editor.scss
+++ b/src/patternfly/components/CodeEditor/code-editor.scss
@@ -135,6 +135,11 @@
   // stylelint-enable selector-class-pattern
 }
 
+.#{$code-editor}__code,
+.#{$code-editor}__header {
+  direction: ltr;
+}
+
 .#{$code-editor}__header + .#{$code-editor}__main {
   border-block-start-width: 0;
 }
