fix(banner): fixed invalid dark theme color declaration

--- a/src/patternfly/sass-utilities/themes/dark/mixins.scss
+++ b/src/patternfly/sass-utilities/themes/dark/mixins.scss
@@ -1,5 +1,7 @@
 @mixin pf-v5-theme-dark--t-dark($color: "--#{$pf-global}--Color--100") {
-  color: var(#{$color});
+  @if $color {
+    color: var(#{$color});
+  }
 
   @extend %pf-v5-theme-dark--t-dark;
 }
