--- a/src/patternfly/components/Menu/menu.scss
+++ b/src/patternfly/components/Menu/menu.scss
@@ -286,7 +286,7 @@
           $prop: transform,
           $ltr-val: translateX(-100%),
           $rtl-val: translateX(#{pf-v5-calc-inverse(-100%)})
-        );    
+        );
       }
       // stylelint-enable
     }
@@ -569,7 +569,7 @@
     --#{$menu}__item--Color: var(--#{$menu}__list-item--m-disabled__item--Color);
     --#{$menu}__item-toggle-icon: var(--#{$menu}__list-item--m-disabled__item-toggle-icon--Color);
   }
-  
+
   &.pf-m-disabled {
     --#{$menu}__list-item--focus-within--BackgroundColor: transparent;
 
@@ -690,12 +690,16 @@
   display: flex;
   align-items: center;
   margin-inline-end: var(--#{$menu}__item-check--MarginRight);
+
+  .#{$check} {
+    --pf-v5-c-check__input--TranslateY: none;
+  }
 }
 
 // Toggle icon
 .#{$menu}__item-toggle-icon {
   @include pf-v5-mirror-inline-on-rtl;
-  
+
   padding-inline-start: var(--#{$menu}__item-toggle-icon--PaddingLeft);
   padding-inline-end: var(--#{$menu}__item-toggle-icon--PaddingRight);
   color: var(--#{$menu}__item-toggle-icon, inherit);
