--- a/src/patternfly/components/Table/table-th.hbs
+++ b/src/patternfly/components/Table/table-th.hbs
@@ -10,6 +10,7 @@
   {{#if table-th--action}} {{pfv}}table__action{{/if}}
   {{#if table-th--icon}} {{pfv}}table__icon{{/if}}
   {{#if table-th--sortable-wrap}} pf-m-wrap{{/if}}
+  {{#if table-th--IsWrap}} pf-m-wrap{{/if}}
   {{#if table-th--selected}} pf-m-selected{{/if}}
   {{#if table-th--IsColumnHelp}} pf-m-help{{/if}}
   {{#if table-th--IsFavorite}} pf-m-favorite{{/if}}"
