chore: use item icon with icon component instead

--- a/src/patternfly/components/Icon/icon-content.hbs
+++ b/src/patternfly/components/Icon/icon-content.hbs
@@ -1,4 +1,6 @@
-<span class="{{pfv}}icon__content{{#if icon-content--modifier}} {{icon-content--modifier}}{{/if}}"
+<span class="{{~pfv}}icon__content
+  {{~#if shouldMirrorRTL}} {{pfv 'unset-prefix'}}m-mirror-inline-rtl{{/if}}
+  {{~#if icon-content--modifier}} {{icon-content--modifier}}{{/if}}"
   {{#if icon-content--attribute}}
     {{{icon-content--attribute}}}
   {{/if}}>
