--- a/src/patternfly/components/Menu/templates/menu-breadcrumbs--Drilldown.hbs
+++ b/src/patternfly/components/Menu/templates/menu-breadcrumbs--Drilldown.hbs
@@ -32,7 +32,13 @@
           {{#> menu-list-item}}
             {{#> menu-item}}
               {{#> menu-item-main}}
-                {{> menu-item-toggle-icon}}
+                {{#> menu-item-icon}}
+                  {{#> icon shouldMirrorRTL=true}}
+                    {{#> icon-content}}
+                      <i class="fas fa-angle-left" aria-hidden="true"></i>
+                    {{/icon-content}}
+                  {{/icon}}
+                {{/menu-item-icon}}
                 {{#> menu-item-text}}
                   Edit
                 {{/menu-item-text}}
@@ -63,7 +69,13 @@
           {{#> menu-list-item}}
             {{#> menu-item}}
               {{#> menu-item-main}}
-                {{> menu-item-toggle-icon}}
+                {{#> menu-item-icon}}
+                  {{#> icon shouldMirrorRTL=true}}
+                    {{#> icon-content}}
+                      <i class="fas fa-angle-left" aria-hidden="true"></i>
+                    {{/icon-content}}
+                  {{/icon}}
+                {{/menu-item-icon}}
                 {{#> menu-item-text}}
                   Edit
                 {{/menu-item-text}}
@@ -73,7 +85,13 @@
           {{#> menu-list-item}}
             {{#> menu-item}}
               {{#> menu-item-main}}
-                {{> menu-item-toggle-icon}}
+                {{#> menu-item-icon}}
+                  {{#> icon shouldMirrorRTL=true}}
+                    {{#> icon-content}}
+                      <i class="fas fa-angle-left" aria-hidden="true"></i>
+                    {{/icon-content}}
+                  {{/icon}}
+                {{/menu-item-icon}}
                 {{#> menu-item-text}}
                   Deployment
                 {{/menu-item-text}}
