--- a/src/patternfly/components/Menu/templates/menu-breadcrumbs--dropdown.hbs
+++ b/src/patternfly/components/Menu/templates/menu-breadcrumbs--dropdown.hbs
@@ -6,7 +6,7 @@
         {{menu-toggle--badge--text}} <i class="fas fa-caret-down" aria-hidden="true"></i>
       {{/badge}}
     {{/menu-toggle}}
-    {{#> menu newcontext menu-item-toggle-icon--IsDrillup=true}}
+    {{#> menu newcontext}}
       {{#> menu-content}}
         {{#> menu-list}}
           {{> @partial-block}}
