--- a/src/patternfly/components/Toolbar/toolbar-expand-all-icon.hbs
+++ b/src/patternfly/components/Toolbar/toolbar-expand-all-icon.hbs
@@ -1,9 +1,10 @@
-{{#> icon icon--modifier=(concat (pfv 'unset-prefix') 'm-mirror-inline-rtl')}}
-  {{#> icon-content}}<span class="{{pfv}}toolbar__expand-all-icon{{#if toolbar-expand-all-icon--modifier}} {{toolbar-expand-all-icon--modifier}}{{/if}}"
-    {{#if toolbar-expand-all-icon--attribute}}
-      {{{toolbar-expand-all-icon--attribute}}}
-    {{/if}}>
-    <i class="fas fa-angle-right" aria-hidden="true"></i>
-  </span>
+{{#> icon shouldMirrorRTL=true}}
+  {{#> icon-content}}
+    <span class="{{pfv}}toolbar__expand-all-icon{{#if toolbar-expand-all-icon--modifier}} {{toolbar-expand-all-icon--modifier}}{{/if}}"
+      {{#if toolbar-expand-all-icon--attribute}}
+        {{{toolbar-expand-all-icon--attribute}}}
+      {{/if}}>
+      <i class="fas fa-angle-right" aria-hidden="true"></i>
+    </span>
   {{/icon-content}}
 {{/icon}}
