--- a/src/patternfly/components/Tooltip/tooltip.scss
+++ b/src/patternfly/components/Tooltip/tooltip.scss
@@ -39,127 +39,81 @@
   &:is(
     .pf-m-top,
     .pf-m-top-left,
-    .pf-m-top-right,
-    .pf-m-block-start,
-    .pf-m-block-start-inline-start,
-    .pf-m-block-start-inline-end
+    .pf-m-top-right
   ) {
-    .#{$tooltip}__arrow {
-      inset-block-end: 0;
-      inset-inline-start: 50%;
-
-      @include pf-v5-bidirectional-style(
-        $prop: transform,
-        $ltr-val: translateX(var(--#{$tooltip}__arrow--m-top--TranslateX)) translateY(var(--#{$tooltip}__arrow--m-top--TranslateY)) rotate(var(--#{$tooltip}__arrow--m-top--Rotate)),
-        $rtl-val: translateX(#{pf-v5-calc-inverse(var(--#{$tooltip}__arrow--m-top--TranslateX))}) translateY(var(--#{$tooltip}__arrow--m-top--TranslateY)) rotate(var(--#{$tooltip}__arrow--m-top--Rotate))
-      );
-    }
+    --#{$tooltip}__arrow--Bottom: var(--#{$tooltip}--m-top--Bottom, 0);
+    --#{$tooltip}__arrow--Left: var(--#{$tooltip}--m-top--Left, 50%);
+    --#{$tooltip}__arrow--TranslateX: var(--#{$tooltip}__arrow--m-top--TranslateX);
+    --#{$tooltip}__arrow--TranslateY: var(--#{$tooltip}__arrow--m-top--TranslateY);
+    --#{$tooltip}__arrow--Rotate: var(--#{$tooltip}__arrow--m-top--Rotate);
   }
 
   &:is(
     .pf-m-bottom,
     .pf-m-bottom-left,
-    .pf-m-bottom-right,
-    .pf-m-block-end,
-    .pf-m-block-end-inline-start,
-    .pf-m-block-end-inline-end
-  ) {
-    .#{$tooltip}__arrow {
-      inset-block-start: 0;
-      inset-inline-start: 50%;
-
-      @include pf-v5-bidirectional-style(
-        $prop: transform,
-        $ltr-val: translateX(var(--#{$tooltip}__arrow--m-bottom--TranslateX)) translateY(var(--#{$tooltip}__arrow--m-bottom--TranslateY)) rotate(var(--#{$tooltip}__arrow--m-bottom--Rotate)),
-        $rtl-val: translateX(#{pf-v5-calc-inverse(var(--#{$tooltip}__arrow--m-bottom--TranslateX))}) translateY(var(--#{$tooltip}__arrow--m-bottom--TranslateY)) rotate(var(--#{$tooltip}__arrow--m-bottom--Rotate))
-      );
-    }
+    .pf-m-bottom-right
+   ) {
+    --#{$tooltip}__arrow--Top: var(--#{$tooltip}--m-bottom--Top, 0);
+    --#{$tooltip}__arrow--Left: var(--#{$tooltip}--m-bottom--Left, 50%);
+    --#{$tooltip}__arrow--TranslateX: var(--#{$tooltip}__arrow--m-bottom--TranslateX);
+    --#{$tooltip}__arrow--TranslateY: var(--#{$tooltip}__arrow--m-bottom--TranslateY);
+    --#{$tooltip}__arrow--Rotate: var(--#{$tooltip}__arrow--m-bottom--Rotate);
   }
 
   &:is(
     .pf-m-left,
     .pf-m-left-top,
-    .pf-m-left-bottom,
-    .pf-m-inline-start,
-    .pf-m-inline-start-block-start,
-    .pf-m-inline-start-block-end
+    .pf-m-left-bottom
   ) {
-    .#{$tooltip}__arrow {
-      inset-block-start: 50%;
-      inset-inline-end: 0;
-
-      @include pf-v5-bidirectional-style(
-        $prop: transform,
-        $ltr-val: translateX(var(--#{$tooltip}__arrow--m-left--TranslateX)) translateY(var(--#{$tooltip}__arrow--m-left--TranslateY)) rotate(var(--#{$tooltip}__arrow--m-left--Rotate)),
-        $rtl-val: translateX(#{pf-v5-calc-inverse(var(--#{$tooltip}__arrow--m-left--TranslateX))}) translateY(var(--#{$tooltip}__arrow--m-left--TranslateY)) rotate(var(--#{$tooltip}__arrow--m-left--Rotate))
-      );
-    }
+    --#{$tooltip}__arrow--Top: var(--#{$tooltip}--m-left--Top, 50%);
+    --#{$tooltip}__arrow--Right: var(--#{$tooltip}--m-left--Right, 0);
+    --#{$tooltip}__arrow--TranslateX: var(--#{$tooltip}__arrow--m-left--TranslateX);
+    --#{$tooltip}__arrow--TranslateY: var(--#{$tooltip}__arrow--m-left--TranslateY);
+    --#{$tooltip}__arrow--Rotate: var(--#{$tooltip}__arrow--m-left--Rotate);
   }
 
   &:is(
     .pf-m-right,
     .pf-m-right-top,
-    .pf-m-right-bottom,
-    .pf-m-inline-end,
-    .pf-m-inline-end-block-start,
-    .pf-m-inline-end-block-end
+    .pf-m-right-bottom
   ) {
-    .#{$tooltip}__arrow {
-      inset-block-start: 50%;
-      inset-inline-start: 0;
-
-      @include pf-v5-bidirectional-style(
-        $prop: transform,
-        $ltr-val: translateX(var(--#{$tooltip}__arrow--m-right--TranslateX)) translateY(var(--#{$tooltip}__arrow--m-right--TranslateY)) rotate(var(--#{$tooltip}__arrow--m-right--Rotate)),
-        $rtl-val: translateX(#{pf-v5-calc-inverse(var(--#{$tooltip}__arrow--m-right--TranslateX))}) translateY(var(--#{$tooltip}__arrow--m-right--TranslateY)) rotate(var(--#{$tooltip}__arrow--m-right--Rotate))
-      );
-    }
+    --#{$tooltip}__arrow--Top: var(--#{$tooltip}--m-right--Top, 50%);
+    --#{$tooltip}__arrow--Left: var(--#{$tooltip}--m-right--Left, 0);
+    --#{$tooltip}__arrow--TranslateX: var(--#{$tooltip}__arrow--m-right--TranslateX);
+    --#{$tooltip}__arrow--TranslateY: var(--#{$tooltip}__arrow--m-right--TranslateY);
+    --#{$tooltip}__arrow--Rotate: var(--#{$tooltip}__arrow--m-right--Rotate);
   }
 
   &:is(
     .pf-m-left-top,
-    .pf-m-right-top,
-    .pf-m-inline-start-block-start,
-    .pf-m-inline-end-block-start
+    .pf-m-right-top
   ) {
-    .#{$tooltip}__arrow {
-      inset-block-start: var(--#{$tooltip}__arrow--Height);
-    }
+    --#{$tooltip}__arrow--Top: 0;
+    --#{$tooltip}__arrow--TranslateY: var(--#{$tooltip}__arrow--m-top--TranslateY);
   }
 
   &:is(
     .pf-m-left-bottom,
-    .pf-m-right-bottom,
-    .pf-m-inline-start-block-end,
-    .pf-m-inline-end-block-end
+    .pf-m-right-bottom
   ) {
-    .#{$tooltip}__arrow {
-      inset-block-start: auto;
-      inset-block-end: 0;
-    }
+    --#{$tooltip}__arrow--Top: auto;
+    --#{$tooltip}__arrow--Bottom: 0;
   }
 
   &:is(
     .pf-m-top-left,
-    .pf-m-bottom-left,
-    .pf-m-block-start-block-start,
-    .pf-m-block-end-block-start
+    .pf-m-bottom-left
   ) {
-    .#{$tooltip}__arrow {
-      inset-inline-start: var(--#{$tooltip}__arrow--Width);
-    }
+    --#{$tooltip}__arrow--Left: 0;
+    --#{$tooltip}__arrow--TranslateX: var(--#{$tooltip}__arrow--m-left--TranslateX);
   }
 
   &:is(
     .pf-m-top-right,
-    .pf-m-bottom-right,
-    .pf-m-block-start-block-end,
-    .pf-m-block-end-block-end
+    .pf-m-bottom-right
   ) {
-    .#{$tooltip}__arrow {
-      inset-inline-start: auto;
-      inset-inline-end: 0;
-    }
+    --#{$tooltip}__arrow--Right: 0;
+    --#{$tooltip}__arrow--Left: auto;
   }
 }
 
@@ -175,18 +129,25 @@
   word-break: break-word;
   background-color: var(--#{$tooltip}__content--BackgroundColor);
 
-  &:is(.pf-m-text-align-left, .pf-m-text-align-start) {
+  &.pf-m-text-align-left {
     text-align: start;
   }
 }
 
 .#{$tooltip}__arrow {
   position: absolute;
+  /* stylelint-disable liberty/use-logical-spec */
+  top: var(--#{$tooltip}__arrow--Top, auto);
+  right: var(--#{$tooltip}__arrow--Right, auto);
+  bottom: var(--#{$tooltip}__arrow--Bottom, auto);
+  left: var(--#{$tooltip}__arrow--Left, auto);
+  /* stylelint-enable */
   width: var(--#{$tooltip}__arrow--Width);
   height: var(--#{$tooltip}__arrow--Height);
   pointer-events: none;
   background-color: var(--#{$tooltip}__arrow--BackgroundColor);
   box-shadow: var(--#{$tooltip}__arrow--BoxShadow);
+  transform: translateX(var(--#{$tooltip}__arrow--TranslateX, 0)) translateY(var(--#{$tooltip}__arrow--TranslateY, 0)) rotate(var(--#{$tooltip}__arrow--Rotate, 0));
 }
 
 // stylelint-disable no-invalid-position-at-import-rule
