--- a/src/patternfly/sass-utilities/component-namespaces.scss
+++ b/src/patternfly/sass-utilities/component-namespaces.scss
@@ -203,6 +203,9 @@ $progress-stepper: #{$pf-prefix} + 'c-progress-stepper';
 // Radio
 $radio: #{$pf-prefix} + 'c-radio';
 
+// Radio
+$resize-observer: #{$pf-prefix} + 'c-resize-observer';
+
 // Select
 $select: #{$pf-prefix} + 'c-select';
 
