fix(Toolbar): increase workspace container height

--- a/src/patternfly/demos/Toolbar/examples/Toolbar.css
+++ b/src/patternfly/demos/Toolbar/examples/Toolbar.css
@@ -5,6 +5,10 @@
   min-height: 420px;
 }
 
+#ws-html-demos-c-toolbar-toolbar-attribute-value-single-select-filter-on-desktop {
+  min-height: 320px;
+}
+
 #ws-html-demos-c-toolbar-toolbar-attribute-value-search-filter-on-mobile {
   min-height: 175px;
 }
