--- a/src/patternfly/demos/Toolbar/examples/Toolbar.css
+++ b/src/patternfly/demos/Toolbar/examples/Toolbar.css
@@ -5,7 +5,8 @@
   min-height: 420px;
 }
 
-#ws-html-demos-c-toolbar-toolbar-attribute-value-single-select-filter-on-desktop {
+#ws-html-demos-c-toolbar-toolbar-attribute-value-single-select-filter-on-desktop,
+#ws-html-demos-c-toolbar-toolbar-attribute-value-checkbox-select-filter-on-desktop {
   min-height: 320px;
 }
 
