--- a/src/patternfly/components/Radio/radio-label.hbs
+++ b/src/patternfly/components/Radio/radio-label.hbs
@@ -1,6 +1,13 @@
 <{{#if radio-label--type}}{{radio-label--type}}{{else}}label{{/if}} class="{{pfv}}radio__label{{#if radio-label--modifier}} {{radio-label--modifier}}{{/if}}"
+  {{#if radio--id}}
+    for="{{radio--id}}-input"
+  {{/if}}
   {{#if radio-label--attribute}}
     {{{radio-label--attribute}}}
   {{/if}}>
-  {{>@partial-block}}
+  {{#if radio-label--text}}
+    {{radio-label--text}}
+  {{else if @partial-block}}
+    {{> @partial-block}}
+  {{/if}}
 </{{#if radio-label--type}}{{radio-label--type}}{{else}}label{{/if}}>
