--- a/src/patternfly/components/Check/check-body.hbs
+++ b/src/patternfly/components/Check/check-body.hbs
@@ -1,6 +1,13 @@
 <span class="{{pfv}}check__body{{#if check-body--modifier}} {{check-body--modifier}}{{/if}}"
+  {{#ifAny check-body--text check--HasBodyText}}
+    id="{{check--id}}-body"
+  {{/ifAny}}
   {{#if check-body--attribute}}
     {{{check-body--attribute}}}
   {{/if}}>
-  {{> @partial-block}}
+  {{#if check-label--text}}
+    {{check-label--text}}
+  {{else if @partial-block}}
+    {{> @partial-block}}
+  {{/if}}
 </span>
