--- a/src/patternfly/components/MenuToggle/menu-toggle--check.hbs
+++ b/src/patternfly/components/MenuToggle/menu-toggle--check.hbs
@@ -1,16 +1,18 @@
-{{#> id-wrapper menu-toggle--check--id=menu-toggle--id}}
+{{#> id-wrapper check--id=(concat menu-toggle--id '-check')}}
   {{#if menu-toggle--check--IsStandalone}}
-    {{#> check check--type="label" check--modifier="pf-m-standalone" check--IsDisabled=menu-toggle--IsDisabled}}
-      {{> check-input check-input--attribute=(concat 'id="' menu-toggle--check--id '-input" name="' menu-toggle--check--id '-input" aria-label="Standalone input"')}}
+    {{#> check check--IsStandalone=true check--IsDisabled=menu-toggle--IsDisabled}}
+      {{> check-input}}
     {{/check}}
   {{else}}
-    {{#> check check--type="label" check--attribute=(concat 'for="' menu-toggle--check--id '-input"') check--IsDisabled=menu-toggle--IsDisabled}}
-      {{> check-input check-input--attribute=(concat 'id="' menu-toggle--check--id '-input" name="' menu-toggle--check--id '-input"')}}
-      {{#if menu-toggle--check--text}}
-        {{#> check-label check-label--IsDisabled=menu-toggle--IsDisabled check-label--type="span"}}{{menu-toggle--check--text}}{{/check-label}}
-      {{else}}
-        {{#> check-label check-label--IsDisabled=menu-toggle--IsDisabled check-label--type="span"}}Label{{/check-label}}
-      {{/if}}
+    {{#> check check--type="label" check--IsDisabled=menu-toggle--IsDisabled}}
+      {{> check-input}}
+      {{#> check-label check-label--IsDisabled=menu-toggle--IsDisabled check-label--type="span"}}
+        {{#if menu-toggle--check--text}}
+          {{menu-toggle--check--text}}
+        {{else}}
+          Label
+        {{/if}}
+      {{/check-label}}
     {{/check}}
   {{/if}}
 {{/id-wrapper}}
