--- a/src/patternfly/components/Radio/radio-body.hbs
+++ b/src/patternfly/components/Radio/radio-body.hbs
@@ -1,6 +1,13 @@
 <span class="{{pfv}}radio__body{{#if radio-body--modifier}} {{radio-body--modifier}}{{/if}}"
+  {{#ifAny radio-body--text radio--HasBodyText}}
+    id="{{radio--id}}-body"
+  {{/ifAny}}
   {{#if radio-body--attribute}}
     {{{radio-body--attribute}}}
   {{/if}}>
-  {{> @partial-block}}
+  {{#if radio-label--text}}
+    {{radio-label--text}}
+  {{else if @partial-block}}
+    {{> @partial-block}}
+  {{/if}}
 </span>
