--- a/src/patternfly/components/Masthead/masthead.scss
+++ b/src/patternfly/components/Masthead/masthead.scss
@@ -45,10 +45,10 @@ $pf-v5-c-masthead--inset-map: build-spacer-map("none", "sm", "md", "lg", "xl", "
 .#{$masthead} {
   --#{$masthead}--PaddingLeft: var(--#{$masthead}--inset);
   --#{$masthead}--PaddingRight: var(--#{$masthead}--inset);
-  --#{$masthead}--BackgroundColor: var(--#{$pf-global}--BackgroundColor--dark-100);
+  --#{$masthead}--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
 
   // Insets
-  --#{$masthead}--inset: var(--#{$pf-global}--spacer--md); // match page insets
+  --#{$masthead}--inset: var(--pf-t--global--spacer--lg); // match page insets
   --#{$masthead}--xl--inset: var(--#{$pf-global}--spacer--lg); // match page insets
 
   // Stack
@@ -94,7 +94,7 @@ $pf-v5-c-masthead--inset-map: build-spacer-map("none", "sm", "md", "lg", "xl", "
   // Main border
   --#{$masthead}__main--before--Right: calc(var(--#{$masthead}--inset) * -1);
   --#{$masthead}__main--before--Left: calc(var(--#{$masthead}--inset) * -1);
-  --#{$masthead}__main--before--BorderBottomWidth: var(--#{$pf-global}--BorderWidth--sm);
+  --#{$masthead}__main--before--BorderBottomWidth: var(--pf-t--global--border--width--divider--default);
   --#{$masthead}__main--before--BorderBottomColor: var(--#{$pf-global}--palette--black-600);
 
   // Toggle
@@ -103,18 +103,18 @@ $pf-v5-c-masthead--inset-map: build-spacer-map("none", "sm", "md", "lg", "xl", "
   --#{$masthead}__toggle--c-button--FontSize: var(--#{$pf-global}--FontSize--2xl);
 
   // Light 100
-  --#{$masthead}--m-light--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
+  --#{$masthead}--m-light--BackgroundColor: var(--pf-t--global--background--color--primary--default);
   --#{$masthead}--m-light__main--BorderBottomColor: var(--#{$pf-global}--BorderColor--300);
 
   // Light 200
-  --#{$masthead}--m-light-200--BackgroundColor: var(--#{$pf-global}--BackgroundColor--200);
-  --#{$masthead}--m-light-200__main--BorderBottomColor: var(--#{$pf-global}--BorderColor--100);
+  --#{$masthead}--m-light-200--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
+  --#{$masthead}--m-light-200__main--BorderBottomColor: var(--pf-t--global--border--color--default);
 
   // Toolbar item
   --#{$masthead}--c-toolbar__item--Display: flex;
 
   // Borders
-  --#{$masthead}--item-border-color--base: var(--#{$pf-global}--palette--black-800);
+  --#{$masthead}--item-border-color--base: var(--pf-t--global--border--color--default);
 
   // Context selector
   --#{$masthead}--c-context-selector--Width: auto;
@@ -145,7 +145,7 @@ $pf-v5-c-masthead--inset-map: build-spacer-map("none", "sm", "md", "lg", "xl", "
   --#{$masthead}--c-toolbar__expandable-content--PaddingRight: var(--#{$masthead}--inset);
   --#{$masthead}--c-toolbar__expandable-content--PaddingBottom: var(--#{$pf-global}--spacer--md);
   --#{$masthead}--c-toolbar__expandable-content--PaddingLeft: var(--#{$masthead}--inset);
-  --#{$masthead}--c-toolbar__expandable-content--before--BorderTopWidth: var(--#{$pf-global}--BorderWidth--sm);
+  --#{$masthead}--c-toolbar__expandable-content--before--BorderTopWidth: var(--pf-t--global--border--width--divider--default);
   --#{$masthead}--c-toolbar__expandable-content--before--BorderTopColor: var(--#{$masthead}--item-border-color--base);
 
   // Set layout to stack by default
@@ -281,6 +281,11 @@ $pf-v5-c-masthead--inset-map: build-spacer-map("none", "sm", "md", "lg", "xl", "
   &:last-child {
     --#{$masthead}__main--MarginRight: 0;
   }
+}
+
+.#{$masthead}__logo {
+  display: flex;
+  gap: var(--pf-t--global--spacer--md);
 }
 
 // Content
