--- a/src/patternfly/components/Check/check-label.hbs
+++ b/src/patternfly/components/Check/check-label.hbs
@@ -1,13 +1,13 @@
-<{{#if check-label--type}}{{check-label--type}}{{else}}label{{/if}} class="{{pfv}}check__label
+<{{#if check--IsLabelWrapped}}span{{else if check-label--type}}{{check-label--type}}{{else}}label{{/if}} class="{{pfv}}check__label
   {{#if check-label--IsDisabled}}
     pf-m-disabled
   {{/if}}
   {{#if check-label--modifier}}
     {{check-label--modifier}}
   {{/if}}"
-  {{#if check--id}}
+  {{#unless check--IsLabelWrapped}}
     for="{{check--id}}-input"
-  {{/if}}
+  {{/unless}}
   {{#if check-label--attribute}}
     {{{check-label--attribute}}}
   {{/if}}>
@@ -19,4 +19,4 @@
   {{#if check--IsRequired}}
     {{> check-label-required}}
   {{/if}}
-</{{#if check-label--type}}{{check-label--type}}{{else}}label{{/if}}>
+</{{#if check--IsLabelWrapped}}span{{else if check-label--type}}{{check-label--type}}{{else}}label{{/if}}>
