--- a/src/patternfly/components/Radio/radio-input.hbs
+++ b/src/patternfly/components/Radio/radio-input.hbs
@@ -3,8 +3,10 @@
   {{#if radio-description--text}}
     aria-describedby="{{radio--id}}-description"
   {{/if}}
-  id="{{radio--id}}-input"
-  name="{{radio--id}}-input"
+  {{#if radio--id}}
+    id="{{radio--id}}-input"
+    name="{{radio--id}}-input"
+  {{/if}}
   {{#if radio--IsStandalone}}
     aria-label="{{#if radio--standalone--label}}{{radio--standalone--label}}{{else}}Standalone radio{{/if}}"
   {{/if}}
